--- a/Praktek Pemdas/Aerox/CyberCity.css
+++ b/Praktek Pemdas/Aerox/CyberCity.css
@@ -25,6 +25,14 @@ body {
 
 /* NAV */
 
+nav .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
 nav {
   background-color: var(--darkblue);
   width: 100%;
@@ -41,12 +49,14 @@ nav {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 31px;
+  /* line-height: 31px; */
 }
 
 .nav-item {
   display: flex;
-  justify-content: center;
+  /* justify-content: right; */
+  align-items: center;
+  gap: 30px;
 }
 
 .nav-item a {
@@ -56,9 +66,10 @@ nav {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
-  line-height: 34px;
+  /* line-height: 34px; */
   /* padding: 0 40px; */
   position: relative;
+  overflow: hidden;
 }
 
 .nav-item a::after {
@@ -78,30 +89,50 @@ nav {
   transition: all 0.2s ease-in-out;
 }
 
-#nav-item-center {
-  margin: 0 60px;
+
+
+
+.nav-item a::after {
+  width: 100%;
+  height: 2px;
+  transform: scale(0);
+  transition: all 0.2s ease-in-out;
+  background-color: var(--yellow);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+}
+
+.nav-item a:hover:after {
+  transform: scale(1);
+  transition: all 0.2s ease-in-out;
+}
+
+span#counter {
+  position: absolute;
+  bottom: 3px;
+  right: 0;
+  color: #d3af37;
+  /* bor */
+  border-radius: 50%;
+  width: 17px;
+  height: 17px;
+  font-size: 14px;
+  border: 1px solid #d3af37;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav span.material-symbols-outlined {
+  font-size: 30px;
 }
 
 #nav-item-last {
-  margin-right: 60px;
-}
+  width: 44px;  
+} 
 
-.nav-item a::after {
-  width: 100%;
-  height: 2px;
-  transform: scale(0);
-  transition: all 0.2s ease-in-out;
-  background-color: var(--yellow);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: "";
-}
-
-.nav-item a:hover:after {
-  transform: scale(1);
-  transition: all 0.2s ease-in-out;
-}
 
 /* CONTENT */
 
@@ -110,22 +141,37 @@ section {
   padding: 100px 100px 50px 100px ;
 }
 
-.box img {
+.box .wrap img {
   width: 400px;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+  max-height: 400px;
+}
+
+.wrap {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  background-image: url(aerox3.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover  ;
 }
 
 .box {
   display: flex;
   justify-content: center;
-  overflow: visible;
+  overflow: hidden;
   margin-bottom: 50px;
   cursor: default;
+  /* object-fit: ; */
 }
 
 .detail-item {
   width: 100%;
   /* height: 500px; */
-  padding: 0 100px;
+  padding: 0 0 0 100px;
   background-image: url(image\ 39.png);
   background-repeat: no-repeat;
   background-size: 350px;
@@ -220,13 +266,49 @@ color: #252C33;
 /* identical to box height */
 
 }
+.wishlist .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+
+
+
+
+#love {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48;
+}
+
+#newLove {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48;
+  color: #252C33;
+}
+
 
 .wishlist {
   margin: 30px 40px;
   display: flex;
 align-items: center;
 text-align: center;
+/* color: red; */
+}
 
+
+
+.wishlist span {
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .other-image {
